[package]
name = "cargo-bashman"
version = "0.7.2"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "A Cargo plugin to generate bash completions, man pages, and/or crate credits."
repository = "https://github.com/Blobfolio/bashman"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
revision = "1"
depends = "$auto"
extended-description = ""
section = "rust"
assets = [
    ["./target/release/cargo-bashman", "usr/bin/", "755"],
    ["./release/completions/cargo-bashman.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/cargo-bashman.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Cargo BashMan"
bash-dir = "./release/completions"
man-dir = "./release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information to STDOUT and exit."

[[package.metadata.bashman.switches]]
long = "--no-bash"
description = "Do not generate BASH completions."

[[package.metadata.bashman.switches]]
long = "--no-credits"
description = "Do not generate CREDITS.md."

[[package.metadata.bashman.switches]]
long = "--no-man"
description = "Do not generate MAN page(s)."

[[package.metadata.bashman.switches]]
long = "--print-targets"
description = "Print the supported target triples (for use with -t/--target) to STDOUT and exit."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information to STDOUT and exit."

[[package.metadata.bashman.options]]
short = "-m"
long = "--manifest-path"
description = "Path to the Cargo.toml file to use."
label = "<Cargo.toml>"
path = true

[[package.metadata.bashman.options]]
short = "-t"
long = "--target"
description = "Limit CREDITS.md to dependencies used by the target <TRIPLE>, e.g. x86_64-unknown-linux-gnu. See --print-targets for the supported values."
label = "<TRIPLE>"

[build-dependencies]
argyle = "0.12.*"

[dependencies]
argyle = "0.12.*"
adbyss_psl = "0.17.*"
dactyl = "0.11.*"
fyi_ansi = "2.1.*"
fyi_msg = "2.1.*"
oxford_join = "0.5.*"
trimothy = "0.7.*"
utc2k = "0.13.*"
write_atomic = "0.6.*"

[dependencies.libdeflater]
version = "=1.24.0"
features = [ "freestanding" ]

[dependencies.semver]
version = "=1.0.*"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.*"
features = [ "raw_value" ]

[dependencies.url]
version = "2.5.*"
features = [ "serde" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
