[package]
name = "cargo-bashman"
version = "0.3.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "BashMan is a Cargo plugin that helps you generate BASH completions and/or MAN pages for your Rust project."
repository = "https://github.com/Blobfolio/bashman"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/cargo-bashman", "usr/bin/", "755"],
    ["../release/completions/cargo-bashman.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/cargo-bashman.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Cargo BashMan"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--no-bash"
description = "Do not generate BASH completions."

[[package.metadata.bashman.switches]]
long = "--no-credits"
description = "Do not generate CREDITS.md."

[[package.metadata.bashman.switches]]
long = "--no-man"
description = "Do not generate MAN page(s)."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print application version."

[[package.metadata.bashman.options]]
short = "-m"
long = "--manifest-path"
description = "Path to the Cargo.toml file to use."
label = "<Cargo.toml>"
path = true

[dependencies]
argyle = "0.5.*"
fyi_msg = "0.9.*"

[dependencies.bashman_core]
path = "../bashman_core"
