[package]
name = "bashman_core"
version = "0.4.7"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "The backing library for Cargo Bashman."
repository = "https://github.com/Blobfolio/bashman"
publish = false

[dependencies]
adbyss_psl = "0.11.*"
argyle = "0.7.2"
cargo_metadata = "=0.18.1"
flate2 = "=1.0.30"
fyi_msg = "0.13.*"
indexmap = "2.3.*"
oxford_join = "0.2.*"
trimothy = "0.3.*"
utc2k = "0.8.*"

[dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[dependencies.toml]
version = "0.8.*"
features = [ "preserve_order" ]
